--- a/src/style.scss
+++ b/src/style.scss
@@ -45,6 +45,23 @@ header {
       width: 42px;
       height: 42px;
     }
+
+    .language-switcher {
+      width: 42px;
+      height: 42px;
+      padding: 0;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      &::-ms-expand {
+        display: none;
+      }
+      &:focus-visible {
+        border: none;
+        outline: none;
+        box-shadow: none;
+      }
+    }
   }
 }
 
@@ -92,6 +109,12 @@ footer {
   .rdp-day_button:hover {
     background-color: var(--calendar-hovered);
   }
+
+  .disabled-btn {
+    // border: 1px solid rgb(0, 108, 180);
+    pointer-events: none;
+    // cursor: no-drop;
+  }
 }
 
 .vacation-list {
@@ -116,6 +139,12 @@ footer {
       right: 24px;
       transform: translate(0, -50%);
       font-size: 14px;
+      &:focus {
+        box-shadow: none;
+      }
+      &:focus-visible {
+        outline: none;
+      }
     }
   }
 }
