--- a/src/style.scss
+++ b/src/style.scss
@@ -24,6 +24,10 @@ p {
   text-wrap: pretty;
 }
 
+img {
+  max-width: 100%;
+}
+
 #root {
   display: flex;
   flex-direction: column;
@@ -35,8 +39,14 @@ p {
 }
 
 header {
+  .logo {
+    width: 42px;
+    height: 42px;
+  }
+
   .app-name {
     font-family: 'Cinzel Decorative', cursive;
+    font-size: clamp(1.2rem, 3vw, 2.5rem);
     font-weight: 700;
   }
 
@@ -67,6 +77,7 @@ header {
 
 main {
   flex: 1;
+  margin-bottom: 1rem;
 
   .card {
     p {
@@ -89,7 +100,7 @@ footer {
 }
 
 #calendar {
-  margin: 50px auto;
+  margin: 1.5rem auto;
   width: fit-content;
   padding: 1rem;
   @include neumorphism;
