--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Cinzel+Decorative:regular,700,900);
 @import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
 
-@import './scss/variables.scss';
+@import './variables.scss';
 @import 'bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 
@@ -28,6 +28,12 @@ img {
   max-width: 100%;
 }
 
+a[type='button'] {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+}
+
 #root {
   display: flex;
   flex-direction: column;
@@ -51,7 +57,7 @@ header {
   }
 
   .header-buttons {
-    button {
+    .btn {
       width: 42px;
       height: 42px;
     }
