--- a/src/components/GoogleButton.css
+++ b/src/components/GoogleButton.css
@@ -63,8 +63,8 @@
 }
 
 .gsi-material-button .gsi-material-button-state {
-  -webkit-transition: opacity 0.218s;
-  transition: opacity 0.218s;
+  /* -webkit-transition: opacity 0.218s;
+  transition: opacity 0.218s; */
   bottom: 0;
   left: 0;
   opacity: 0;
