--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -84,6 +84,11 @@ header {
       width: 42px;
       height: 42px;
       border-radius: 50%;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      // background-color: var(--primary);
     }
 
     .language-switcher {
